fix home arrows on Safari

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -136,7 +136,7 @@ footer a {
 /* Navigation button style. */
 nav a {
 	transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
-	display: inline-block;
+	display: inline-flex;
 	font-weight: 600;
 	color: var(--blue);
 	background-color: var(--action-background-l1);
